[gd_scene load_steps=6 format=3 uid="uid://dyhfxxwxo0f7w"]

[ext_resource type="Script" uid="uid://fp7y0o0bxtmc" path="res://Tests/score_card_test.gd" id="1_xkla8"]
[ext_resource type="PackedScene" uid="uid://dugpl3du3i6xo" path="res://Scenes/Dice/dice_hand.tscn" id="2_xkla8"]
[ext_resource type="PackedScene" uid="uid://c6k045mexxkyd" path="res://Scenes/Dice/dice.tscn" id="3_svr4k"]
[ext_resource type="PackedScene" uid="uid://bsukvul4wop20" path="res://Scenes/ScoreCard/score_card.tscn" id="4_xkla8"]
[ext_resource type="PackedScene" uid="uid://sliaarrkymdo" path="res://Scenes/UI/score_card_ui.tscn" id="5_svr4k"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xkla8")

[node name="DiceHand" parent="." instance=ExtResource("2_xkla8")]
dice_scene = ExtResource("3_svr4k")

[node name="RollButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 133.0
offset_right = 22.0
offset_bottom = 141.0
text = "ROLL"

[node name="DiceContainer" type="Node2D" parent="."]

[node name="ScoreCard" parent="." instance=ExtResource("4_xkla8")]

[node name="ScoreCardUI" parent="." instance=ExtResource("5_svr4k")]
offset_left = 854.0
offset_top = 16.0
offset_right = 894.0
offset_bottom = 43.0

[connection signal="pressed" from="RollButton" to="." method="_on_button_pressed"]
